# d2x-xl

branches/build-system/: Makefile.am  autogen.sh  configure.ac
branches/build-system/2d/: 2dsline.c  Makefile.am  bitblt.c  canvas.c  line.c
branches/build-system/3d/: Makefile.am
branches/build-system/VisualC/d2xgl/: d2xgl.vcproj
branches/build-system/VisualC/libmve/: libmve.vcproj
branches/build-system/arch/: Makefile.am
branches/build-system/arch/linux/: Makefile.am
branches/build-system/arch/ogl/: Makefile.am
branches/build-system/arch/sdl/: Makefile.am  digi.c
branches/build-system/arch/win32/: Makefile.am
branches/build-system/cfile/: Makefile.am
branches/build-system/iff/: Makefile.am
branches/build-system/include/: error.h
branches/build-system/libmve/: Makefile.am
branches/build-system/main/: Makefile.am
branches/build-system/maths/: Makefile.am
branches/build-system/mem/: Makefile.am
branches/build-system/misc/: Makefile.am
branches/build-system/texmap/: Makefile.am  ntmap.c  scanline.c
dle-xp/: about.cpp  about.h  add.cpp  advobjdlg.cpp  aligndlg.cpp  bitmap.h  block.cpp  check.cpp  check.h  comcube.cpp  comcube.h  commine.cpp  commine.h  comobj.cpp  comobj.h  control.cpp  control.h  convert.cpp  convert.h  ctexdlg-dmb2.cpp  cube.cpp  cubedlg.cpp  define.h  diagdlg.cpp  dlc.cpp  dlc.dsp  dlc.dsw  dlc.h  dlc.odl  dlc.opt  dlc.plg  dlc.rc  dlc.vcproj  dlc_i.c  dlc_i.h  dlcdoc.cpp  dlcdoc.h  dlcres.h  dlcview.cpp  dlcview.h  (+103 more)
dle-xp/resource/_svn/: entries
dle-xp/resource/bitmaps/_svn/: entries
dle-xp/resource/cursors/: drag.cur  rotate.cur  zoomout.cur
dle-xp/resource/cursors/_svn/: entries
dle-xp/resource/cursors/_svn/text-base/: pencil.cur.svn-base  rotate.cur.svn-base  xhairs.cur.svn-base  zoom.cur.svn-base  zoomin.cur.svn-base
dle-xp/resource/data/: descent.clr  descent.lgt  descent2.clr  descent2.lgt  robot.hxm  temp2.ham
dle-xp/resource/data/_svn/: entries
dle-xp/resource/data/_svn/text-base/: temp2.ham.svn-base
dle-xp/resource/icons/_svn/: entries
dle-xp/resource/levels/: level1.rl2  level1b.rl2  level1e.rl2  new2.rl2  new3.rl2  new_save.mn2  new_save.msn  new_save.rdl  new_save.rl2
dle-xp/resource/levels/_svn/: entries
dle-xp/resource/levels/_svn/text-base/: new_save.mn2.svn-base  new_save.msn.svn-base
dle-xp/resource/palettes/: alien1.256  alien2.256  alien2.pal  credits.256  fire.256  fire.pal  groupa.pal  ice.256  ice.pal  palette.256  water.256  water.pal
dle-xp/resource/palettes/_svn/: entries
dle-xp/resource/palettes/_svn/text-base/: alien1.pal.svn-base  credits.pal.svn-base  default.pal.svn-base
dle-xp/resource/registry/: comcube.rgs  commine.rgs  comobj.rgs  dlc.rgs
dle-xp/resource/registry/_svn/: entries
