INCLUDES = -I$(top_srcdir)/include  -I$(top_srcdir)/main -I$(top_srcdir)/3d

noinst_LIBRARIES = lib2d.a

lib2d_a_SOURCES = \
	2dsline.c \
	bitblt.c \
	bitmap.c \
	box.c \
	canvas.c \
	circle.c \
	disc.c \
	font.c \
	gpixel.c \
	ibitblt.c \
	line.c \
	palette.c \
	pcx.c \
	pixel.c \
	poly.c \
	rect.c \
	rle.c \
	scalec.c \
	tmerge.c

noinst_HEADERS = \
	bitmap.h \
	clip.h \
	scalea.h

EXTRA_DIST = \
	scale.c
