INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/arch/include -I$(top_srcdir)/3d

noinst_LIBRARIES = libmain.a

if USE_NETWORK
  NETWORK_SRCS = kmatrix.c multi.c multibot.c network.c netmisc.c
endif

libmain_a_SOURCES = \
	ai.c \
	ai2.c \
	aipath.c \
	autodl.c \
	automap.c \
	banlist.c \
	bm.c \
	cameras.c \
	cheats.c \
	cmd.c \
	cntrlcen.c \
	collide.c \
	config.c \
	console.c \
	controls.c \
	credits.c \
	crypt.c \
	digiobj.c \
	effects.c \
	endlevel.c \
	escort.c \
	fireball.c \
	fuelcen.c \
	fvi.c \
	game.c \
	gamecntl.c \
	gamefont.c \
	gamemine.c \
	gamepal.c \
	gamerend.c \
	gamesave.c \
	gameseg.c \
	gameseq.c \
	gauges.c \
	hoard.c \
	hostage.c \
	hud.c \
	inferno.c \
	input.c \
	kconfig.c \
	kludge.c \
	laser.c \
	lighting.c \
	lightmap.c \
	menu.c \
	mglobal.c \
	mission.c \
	morph.c \
	movie.c \
	multimsg.c \
	netmenu.c \
	newdemo.c \
	newmenu.c \
	object.c \
	objsmoke.c \
	oof.c \
	paging.c \
	particles.c \
	physics.c \
	piggy.c \
	player.c \
	playsave.c \
	polyobj.c \
	powerup.c \
	render.c \
	robot.c \
	scores.c \
	segment.c \
	slew.c \
	songs.c \
	sphere.c \
	state.c \
	switch.c \
	terrain.c \
	texmerge.c \
	text.c \
	thief.c \
	titles.c \
	tracker.c \
	vclip.c \
	wall.c \
	weapon.c \
	${NETWORK_SRCS}

noinst_HEADERS = \
	ai.h \
	aistruct.h \
	autodl.h \
	automap.h \
	banlist.h \
	bm.h \
	bmread.h \
	cameras.h \
	cheats.h \
	cntrlcen.h \
	collide.h \
	compbit.h \
	config.h \
	controls.h \
	credits.h \
	desc_id.h \
	desw.h \
	digi.h \
	effects.h \
	endlevel.h \
	escort.h \
	fireball.h \
	fuelcen.h \
	fvi_a.h \
	fvi.h \
	gamecntl.h \
	gamefont.h \
	game.h \
	gamemine.h \
	gamepal.h \
	gamesave.h \
	gameseg.h \
	gameseq.h \
	gamestat.h \
	gauges.h \
	glext.h \
	hostage.h \
	hudmsg.h \
	inferno.h \
	input.h \
	joydefs.h \
	kconfig.h \
	kmatrix.h \
	laser.h \
	lighting.h \
	lightmap.h \
	menu.h \
	mission.h \
	modem.h	\
	morph.h \
	movie.h \
	multibot.h \
	multi.h \
	multimsg.h \
	netmenu.h \
	netmisc.h \
	network.h \
	newdemo.h \
	newmenu.h \
	object.h \
	objsmoke.h \
	oof.h \
	paging.h \
	particles.h \
	physics.h \
	piggy.h \
	player.h \
	playsave.h \
	pof.h \
	polyobj.h \
	powerup.h \
	render.h \
	reorder.h \
	robot.h \
	scores.h \
	screens.h \
	segment.h \
	segpoint.h \
	slew.h \
	songs.h \
	sounds.h \
	sphere.h \
	state.h \
	switch.h \
	terrain.h \
	texmerge.h \
	text.h \
	textures.h \
	titles.h \
	tracker.h \
	vclip.h \
	vers_id.h \
	wall.h \
	weapon.h

EXTRA_DIST = \
	bmread.c \
	d3_gam.c \
	dumpmine.c \
	joydefs.c \
	netmisc-new.c \
	netmisc-old.c \
	perlin.c \
	plrship.c \
	udp_data.c
